# nanoScript

./: CMakeLists.txt  README.md
nanoScript/: CMakeLists.txt
nanoScript/src/: nanoScript.cpp  nanoScriptMain.cpp
